--- a/angular.json
+++ b/angular.json
@@ -35,7 +35,9 @@
               "@angular/material/prebuilt-themes/azure-blue.css",
               "src/styles.less"
             ],
-            "scripts": [],
+            "scripts": [
+              "../node_modules/node-open-geocoder/index.js"
+            ],
             "server": "src/main.server.ts",
             "prerender": true,
             "ssr": {
