--- a/angular.json
+++ b/angular.json
@@ -35,9 +35,7 @@
               "@angular/material/prebuilt-themes/azure-blue.css",
               "src/styles.less"
             ],
-            "scripts": [
-              "../node_modules/node-open-geocoder/index.js"
-            ],
+            "scripts": [],
             "server": "src/main.server.ts",
             "prerender": true,
             "ssr": {
