--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "^18.1.0",
     "@angular/ssr": "^18.1.3",
     "express": "^4.18.2",
+    "jest-environment-jsdom": "^29.7.0",
     "nodejs-geolocation": "^2.3.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -35,8 +36,11 @@
     "@angular/compiler-cli": "^18.1.0",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
+    "@types/jest": "^29.5.14",
     "@types/node": "^18.18.0",
     "jasmine-core": "~5.1.0",
+    "jest": "^29.7.0",
+    "jest-preset-angular": "^14.2.4",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
