--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,13 +14,13 @@
     "experimentalDecorators": true,
     "moduleResolution": "bundler",
     "importHelpers": true,
-    "target": "ES2022",
-    "module": "ES2022",
+    "target": "ESNext",
+    "module": "ESNext",
     "lib": [
       "ES2022",
       "dom"
     ],
-    "baseUrl": "./src",
+    "baseUrl": "./",
     "paths": {
       "@app/*": ["src/app/*"],
       "@env/*": ["src/environments/*"]
